improve UI of dashboard wallet and sitebar

--- a/app/globals.css
+++ b/app/globals.css
@@ -225,3 +225,12 @@ body {
 .animate-scroll-right-to-left {
   animation: scrollRightToLeft 60s linear infinite;
 }
+.hide-scrollbar {
+  /* For modern browsers */
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; /* WebKit browsers (Chrome, Safari, etc.) */
+}
